--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "pinia": "^2.1.6",
     "sass": "^1.68.0",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
